# vimai

./: .editorconfig  .env.sample  .gitattributes  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  MANIFEST.in  README.md  claude-progress.md  claude_progress.md  clean-state-checklist.md  clean_state_checklist.md  cspell.json  feature-list.md  feature_list.json  main.py  pyproject.toml
.ai/: claude-progress.md  clean-state-checklist.md  feature-list.md
.github/ISSUE_TEMPLATE/: feature.md  task.md
.github/agents/: pr-review.agent.md
.github/instructions/: general-review.instructions.md  python-review.instructions.md
.github/workflows/: ci.yml  pr-review.lock.yml  pr-review.md
doc/: vimai.txt
docs/: ARCHITECTURE.md
docs/standards/: python-standards.md
plugin/: vimai.vim
src/vimai/: __init__.py  __main__.py  chain.py  cli.py  commands.py  config.py  llm.py  math_utils.py  session.py
src/vimai/agents/: __init__.py  external.py  loader.py
src/vimai/builtin_agents/: __init__.py  vi.md
tests/: test_agents.py  test_chain.py  test_cli.py  test_commands.py  test_config.py  test_distribution.py  test_external_agents.py  test_llm.py  test_main.py  test_session.py  vimai.vader
