[project]
name = "vimai"
version = "0.1.0"
description = "A plugin that lets you query LLM inside vim"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langsmith>=0.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that call real Azure OpenAI (skipped unless RUN_E2E=1)",
]
